// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-number Renders with all props provided 1`] = `
<form-control-number>
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="age" part="label text color font-family">
      Age
    </label>
    <input class="form-control is-invalid" disabled="" id="age" name="age" part="input-invalid input text color font-family background-color" type="number" value="25">
    <small class="form-text text-muted" id="form-help-text-age" part="text color font-family">
      Enter your age
    </small>
    <small class="form-text text-danger" id="form-error-text-age" part="text-danger text color font-family">
      Invalid age
    </small>
  </div>
</form-control-number>
`;

exports[`form-control-number Renders with default props 1`] = `
<form-control-number>
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="age" part="label text color font-family">
      Age
    </label>
    <input class="form-control" id="age" name="age" part="input text color font-family background-color" type="number" value="">
  </div>
</form-control-number>
`;
